[gd_scene load_steps=2 format=3 uid="uid://k6n8l2145dek"]

[ext_resource type="Script" uid="uid://hb5sjc60nqrv" path="res://scripts/home.gd" id="1_krot7"]

[node name="Home" type="Control"]
layout_direction = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krot7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1920.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Record" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Welcome !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mute" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
toggle_mode = true
text = "Mute"

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
